@@ -12,6 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <suiteFile>src/test/resources/suites/regressionSuite.xml</suiteFile>
     </properties>
 
     <dependencies>
@@ -71,6 +72,12 @@
             <artifactId>log4j-api</artifactId>
             <version>2.23.1</version>
         </dependency>
+        <dependency>
+            <groupId>uk.com.robust-it</groupId>
+            <artifactId>cloning</artifactId>
+            <version>1.7.4</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -79,9 +86,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Tests.java</include>
-                    </includes>
+                    <!--This line is needed due to a java compatibility issue between the cloning dependency and java 17 -->
+                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteFile}</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
